# kak-dap

./: .gitignore  .woodpecker.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  adapters.json  adapters.yaml  build.gradle  pyproject.toml  requirements.txt  requirements_dev.txt  run_in_venv.sh  setup_dev_venv.sh  setup_venv.sh
ci/: build-release.sh
demo/: test_c  test_c.cpp
demo/cpp/: .kak-dap.json  .kak-dap.yaml  build_test.sh  test_c.cpp
demo/python/: .kak-dap.json  .kak-dap.yaml  multithreaded_test.py  test.py
demo/ruby/: .kak-dap.json  .kak-dap.yaml  Gemfile
installers/: cpptools.py  debugpy.py  readapt.py  vscode-cpptools.py
installers/utils/: installer_utils.py
rc/: kak-dap.kak  kak-inspector.kak
src/: DAP.java  Main.java  Message.java  adapter.py  breakpoints.py  breakpoints.rs  config.py  config.rs  context.rs  controller.rs  debug_adapter_comms.rs  debug_session.py  general.py  general.rs  kakoune.py  kakoune.rs  main.py  main.rs  stack_trace.rs  stacktrace.py  types.rs  variables.py  variables.rs  xdg_utils.py
