[package]
name = "kak-dap"
version = "0.1.0"
authors = ["James Dugan <jdugan6240@vivaldi.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
json = "0.12.4"
fnv="1"
jsonrpc-core = "8"
crossbeam-channel = "0"

